# interpretability

./: .gitignore  LICENSE  README.md
cot-edit-resistance/: .gitignore  .pdm-python  AGENTS.md  EXPERIMENTS.md  README.md  next_chat_prompt.txt  pyproject.toml
cot-edit-resistance/data/: baseline_traces.json  experiment1_results.json  experiment2_results.json  experiment3_results.json  experiment4_results.json
cot-edit-resistance/experiments/: experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  phase0_baseline.py  recheck.py  test_experiment5.py  utils.py
cot-edit-resistance/outputs/experiment5/: filtered_behaviors.json  injection_results.json  layer_heatmap_arrays.pt  trajectory_data.json
turpin-unfaithful-cot-replication/: .gitignore  README.md  bbh_replication.ipynb  pyproject.toml
turpin-unfaithful-cot-replication/data/bbh/: NOTICE
