[project]
name = "cot-edit-resistance"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Gao", email = "mgao31415@gmail.com"},
]
dependencies = ["torch>=2.12.0", "transformers>=5.8.1", "datasets>=4.8.5", "tqdm>=4.67.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
